--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   </head>
 
   <body>
-    <div class="page-container">
+    <div class="page-container container-fluid">
       <header>
         <div class="header-section">
           <div class="header-top">
             <div class="container header-row-align">
               <div class="row">
-                <div class="col-xl-6 col-md-6 col-sm-6">
+                <div class="col-xl-6 col-md-6 col-sm-6 col-xs-6">
                   <ul class="social-media">
                     <li>
                       <a href=""><i class="bi bi-facebook top-icon"></i></a>
@@ -48,7 +48,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-xl-6 col-md-6 col-sm-6">
+                <div class="col-xl-6 col-md-6 col-sm-6 col-xs-6">
                   <ul class="header-contact">
                     <li>
                       <a class="ms-0 me-4" href=""
@@ -141,8 +141,8 @@
         <div class="overlay"></div>
         <div class="container hero-content">
           <div class="row">
-            <div class="col-xl-6 col-md-6 col-sm-4"></div>
-            <div class="col-xl-6 col-md-6 col-sm">
+            <div class="col-xl-6 col-md-6 col-sm-4 col-xs-4"></div>
+            <div class="col-xl-6 col-md-6 col-sm col-xs-4">
               <h1 class="display-4 fw-bold">
                 Empowering Your Future with Clean Solar Energy
               </h1>
