mobile screen added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="header-top">
             <div class="container header-row-align">
               <div class="row">
-                <div class="col-xl-6 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-xl-6 col-md-6 col-sm-6 col-6">
                   <ul class="social-media">
                     <li>
                       <a href=""><i class="bi bi-facebook top-icon"></i></a>
@@ -48,7 +48,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-xl-6 col-md-6 col-sm-6 col-xs-6">
+                <div class="col-xl-6 col-md-6 col-sm-6 col-6">
                   <ul class="header-contact">
                     <li>
                       <a class="ms-0 me-4" href=""
@@ -57,7 +57,7 @@
                       >
                     </li>
                     <li>
-                      <a class="ms-0" href=""
+                      <a id="location" class="ms-0" href=""
                         ><i class="bi bi-geo-alt-fill right-icon"></i>Get
                         Location</a
                       >
@@ -141,8 +141,8 @@
         <div class="overlay"></div>
         <div class="container hero-content">
           <div class="row">
-            <div class="col-xl-6 col-md-6 col-sm-4 col-xs-4"></div>
-            <div class="col-xl-6 col-md-6 col-sm col-xs-4">
+            <div class="col-xl-6 col-md-6 col-sm-4 col-3"></div>
+            <div class="col-xl-6 col-md-6 col-sm  col">
               <h1 class="display-4 fw-bold">
                 Empowering Your Future with Clean Solar Energy
               </h1>
@@ -171,7 +171,7 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-xl-3 col-md-3 col-sm-3">
+                        <div class="col-xl-3 col-md-3 col-sm-3 col-3 ">
                           <div class="icon-box">
                             <img
                               src="imagesfile/homes-icon.png"
@@ -180,7 +180,7 @@
                             />
                           </div>
                         </div>
-                        <div class="col-xl col-md col-sm">
+                        <div class="col-xl col-md col-sm col">
                           <h3 class="card-title">Residential</h3>
 
                           <p class="card-text">
@@ -200,7 +200,7 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-xl-3 col-md-3 col-sm-3">
+                        <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                           <div class="icon-box">
                             <img
                               src="imagesfile/commercial.png"
@@ -209,7 +209,7 @@
                             />
                           </div>
                         </div>
-                        <div class="col-xl col-md col-sm">
+                        <div class="col-xl col-md col-sm col">
                           <h3 class="card-title">Commercial</h3>
 
                           <p class="card-text">
@@ -229,7 +229,7 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-xl-3 col-md-3 col-sm-3">
+                        <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                           <div class="icon-box">
                             <img
                               src="imagesfile/ongrid-solar.png"
@@ -238,7 +238,7 @@
                             />
                           </div>
                         </div>
-                        <div class="col-xl col-md col-sm">
+                        <div class="col-xl col-md col-sm col">
                           <h3 class="card-title">On Grid Solar</h3>
                           <p class="card-text">
                             Solar connected to the grid, letting you sell extra
@@ -256,7 +256,7 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-xl-3 col-md-3 col-sm-3">
+                        <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                           <div class="icon-box">
                             <img
                               src="imagesfile/offgrid-solar.png"
@@ -265,7 +265,7 @@
                             />
                           </div>
                         </div>
-                        <div class="col-xl col-md col-sm">
+                        <div class="col-xl col-md col-sm col">
                           <h3 class="card-title">Off Grid Solar</h3>
 
                           <p class="card-text">
@@ -284,7 +284,7 @@
                   <div class="card">
                     <div class="card-body">
                       <div class="row">
-                        <div class="col-xl-3 col-md-3 col-sm-3">
+                        <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                           <div class="icon-box">
                             <img
                               src="imagesfile/hybrid.png"
@@ -293,7 +293,7 @@
                             />
                           </div>
                         </div>
-                        <div class="col-xl col-md col-sm">
+                        <div class="col-xl col-md col-sm col">
                           <h3 class="card-title">Hybrid Solar</h3>
 
                           <p class="card-text">
@@ -376,22 +376,22 @@
       <section class="experience">
         <div class="container">
           <div class="row tab-row">
-            <div class="col-xl-3 col-md-6 col-sm-6 exp-row">
+            <div class="col-xl-3 col-md-6 col-sm-6 col-12 exp-row">
               <div class="row">
-                <div class="col-xl-3 col-md-3 col-sm-3 exp-tab">
+                <div class="col-xl-3 col-md-3 col-sm-3 col-3 exp-tab">
                   <img src="imagesfile/brand-icon.png" alt="" />
                 </div>
-                <div class="col-xl col-md col-sm ps-1 pe-0 gap-tab">
+                <div class="col-xl col-md col-sm col ps-1 pe-0 gap-tab">
                   <h4>10+ <br />Major Brands</h4>
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-6 exp-row">
+            <div class="col-xl-3 col-md-6 col-sm-6 col-12 exp-row">
               <div class="row">
-                <div class="col-xl-3 col-md-3 col-sm-3 exp-tab">
+                <div class="col-xl-3 col-md-3 col-sm-3 col-3 exp-tab">
                   <img src="imagesfile/certified-expert-team.png" alt="" />
                 </div>
-                <div class="col-xl col-md col-sm ps-1 pe-0">
+                <div class="col-xl col-md col-sm col ps-1 pe-0">
                   <h4>
                     Certified <br />
                     Expert Teams
@@ -399,12 +399,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-6 exp-row">
+            <div class="col-xl-3 col-md-6 col-sm-6 col-12 exp-row">
               <div class="row">
-                <div class="col-xl-3 col-md-3 col-sm-3 exp-tab">
+                <div class="col-xl-3 col-md-3 col-sm-3 col-3 exp-tab">
                   <img src="imagesfile/consuntancy-icon.png" alt="" />
                 </div>
-                <div class="col-xl col-md col-sm ps-1 pe-0 gap-tab">
+                <div class="col-xl col-md col-sm col ps-1 pe-0 gap-tab">
                   <h4>
                     Effective <br />
                     Consultancy
@@ -412,12 +412,12 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-sm-6 exp-row">
+            <div class="col-xl-3 col-md-6 col-sm-6 col-12 exp-row">
               <div class="row">
-                <div class="col-xl-3 col-md-3 col-sm-3 exp-tab">
+                <div class="col-xl-3 col-md-3 col-sm-3 col-3 exp-tab">
                   <img src="imagesfile/growing.png" alt="" />
                 </div>
-                <div class="col-xl col-md col-sm ps-1 pe-0">
+                <div class="col-xl col-md col-sm col ps-1 pe-0">
                   <h4>
                     1MW + <br />
                     & Growing
@@ -485,10 +485,10 @@
       <section class="info">
         <div class="container">
           <div class="row">
-            <div class="col-xl-6 col-md-6 col-sm-12">
+            <div class="col-xl-6 col-md-6 col-sm-12 col-12">
               <img src="imagesfile/pngwing.com (10).png" alt="" />
             </div>
-            <div class="col-xl-6 col-md-6 col-sm-12 info-text">
+            <div class="col-xl-6 col-md-6 col-sm-12 col-12 info-text">
               <h1>Embrace Solar Energy and Empower Your Life with Sunlight</h1>
               <p>
                 We drive the transition to more sustainable, reliable &
@@ -511,7 +511,7 @@
           </p>
           <div class="project-grid">
             <div class="row">
-              <div class="col-xl-4 col-sm-6 col-md-4 project-column">
+              <div class="col-xl-4 col-sm-6 col-md-4  project-column ">
                 <a href="">
                   <div class="project-card">
                     <img src="imagesfile/2021-08-12-768x768 (1).jpeg" alt="" />
@@ -528,7 +528,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-xl-4 col-md-4 col-sm-6 project-column">
+              <div class="col-xl-4 col-md-4 col-sm-6  project-column">
                 <a href="">
                   <div class="project-card">
                     <img src="imagesfile/2021-08-12-768x768.jpeg" alt="" />
@@ -543,7 +543,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-xl-4 col-md-4 col-sm-6 project-column">
+              <div class="col-xl-4 col-md-4 col-sm-6  project-column">
                 <a href="">
                   <div class="project-card">
                     <img src="imagesfile/2021-08-17-768x768.jpeg" alt="" />
@@ -560,7 +560,7 @@
               </div>
 
               <div
-                class="col-xl-6 col-md-6 col-sm-6 project-column project-second-line-right"
+                class="col-xl-6 col-md-6 col-sm-6  project-column project-second-line-right"
               >
                 <a href="">
                   <div class="project-card">
@@ -577,7 +577,7 @@
                 </a>
               </div>
               <div
-                class="col-xl-6 col-md-6 col-sm-6 project-column project-second-line-left"
+                class="col-xl-6 col-md-6 col-sm-6 col-12 project-column project-second-line-left"
               >
                 <a href="">
                   <div class="project-card">
@@ -613,14 +613,14 @@
               <!-- Testimonial Slide 1 -->
               <div class="swiper-slide testimonial-card">
                 <div class="row">
-                  <div class="col-xl-3 col-md-3 col-sm-3">
+                  <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                     <img
                       src="imagesfile/user.png"
                       alt="Client Photo"
                       class="testimonial-photo"
                     />
                   </div>
-                  <div class="col-xl col-md col-sm">
+                  <div class="col-xl col-md col-sm col test-column">
                     <h3 class="client-name">AANCHAL <br />REVINDRAN</h3>
 
                     <ul>
@@ -644,14 +644,14 @@
               <!-- Testimonial Slide 2 -->
               <div class="swiper-slide testimonial-card">
                 <div class="row">
-                  <div class="col-xl-3 col-md-3 col-sm-3">
+                  <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                     <img
                       src="imagesfile/user.png"
                       alt="Client Photo"
                       class="testimonial-photo"
                     />
                   </div>
-                  <div class="col-xl col-md col-sm">
+                  <div class="col-xl col-md col-sm col test-column">
                     <h3 class="client-name">Anup <br />Sundaresan</h3>
 
                     <ul>
@@ -675,14 +675,14 @@
               <!-- Testimonial Slide 3 -->
               <div class="swiper-slide testimonial-card">
                 <div class="row">
-                  <div class="col-xl-3 col-md-3 col-sm-3">
+                  <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                     <img
                       src="imagesfile/user.png"
                       alt="Client Photo"
                       class="testimonial-photo"
                     />
                   </div>
-                  <div class="col-xl col-md col-sm">
+                  <div class="col-xl col-md col-sm col test-column">
                     <h3 class="client-name">
                       Powertech General <br />Maintenance
                     </h3>
@@ -705,14 +705,14 @@
               <!-- Testimonial Slide 3 -->
               <div class="swiper-slide testimonial-card">
                 <div class="row">
-                  <div class="col-xl-3 col-md-3 col-sm-3">
+                  <div class="col-xl-3 col-md-3 col-sm-3 col-3 ">
                     <img
                       src="imagesfile/user.png"
                       alt="Client Photo"
                       class="testimonial-photo"
                     />
                   </div>
-                  <div class="col-xl col-md col-sm">
+                  <div class="col-xl col-md col-sm col test-column">
                     <h3 class="client-name">
                       White Innovative <br />Solutions
                     </h3>
@@ -753,14 +753,14 @@
               <!-- Testimonial Slide 3 -->
               <div class="swiper-slide testimonial-card">
                 <div class="row">
-                  <div class="col-xl-3 col-md-3 col-sm-3">
+                  <div class="col-xl-3 col-md-3 col-sm-3 col-3">
                     <img
                       src="imagesfile/user.png"
                       alt="Client Photo"
                       class="testimonial-photo"
                     />
                   </div>
-                  <div class="col-xl col-md col-sm">
+                  <div class="col-xl col-md col-sm col test-column">
                     <h3 class="client-name">Arun P</h3>
 
                     <ul>
@@ -812,13 +812,13 @@
             </div>
 
             <!-- Right Section: Form -->
-            <div class="col-xl-4 col-md-12 col-sm-12 p-4 shadow-sm form-part">
+            <div class="col-xl-4 col-md-12 col-sm-12 col-12 p-4 shadow-sm form-part">
               <div class="row">
-                <div class="col-xl-3 col-md-3 col-sm-3 ms-5 pt-3">
+                <div class="col-xl-3 col-md-3 col-sm-3 col-3 ms-5 pt-3">
                   <!-- logo  -->
                   <img src="imagesfile/call-back.png" alt="" />
                 </div>
-                <div class="col-xl col-md col-sm ps-0">
+                <div class="col-xl col-md col-sm col ps-0">
                   <h4>Request <br />for a <strong>Call back</strong></h4>
                 </div>
               </div>
@@ -963,7 +963,7 @@
           </div>
           <div class="row">
             <!-- Quick Links Column -->
-            <div class="footer-column col-md-4 col-sm-6">
+            <div class="footer-column col-md-4 col-sm-6 col-12">
               <h3>Quick Links</h3>
               <ul>
                 <li><a href="#">Home</a></li>
@@ -977,7 +977,7 @@
             </div>
 
             <!-- Contact Info Column -->
-            <div class="footer-column col-md-4 col-sm-6">
+            <div class="footer-column col-md-4 col-sm-6 col-12">
               <h3>Our Services</h3>
               <ul>
                 <li><a href="#">Residential Solar</a></li>
@@ -989,7 +989,7 @@
             </div>
 
             <!-- Subscription Column -->
-            <div class="footer-column col-md-4 col-sm-12">
+            <div class="footer-column col-md-4 col-sm-12 col-12">
               <h3 id="contact-down">Contact Us</h3>
               <ul>
                 <li id="max-address">
@@ -1070,6 +1070,18 @@ document.addEventListener("scroll", function () {
     headerTop.style.display = "block"; // Show the header top
     navbar.classList.remove("scrolled"); // Remove the scrolled class
   }
+});
+
+
+</script>
+
+<script>
+  document.querySelector('.project-grid').addEventListener('wheel', function (e) {
+    if (e.deltaY > 0) {
+        this.scrollBy({ left: 300, behavior: 'smooth' }); // Scroll right
+    } else {
+        this.scrollBy({ left: -300, behavior: 'smooth' }); // Scroll left
+    }
 });
 
 </script>
