--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="col-xl-6 col-md-6 col-sm-6 col-6">
                   <ul class="header-contact">
                     <li>
-                      <a class="ms-0 me-4" href=""
+                      <a class="ms-0" href=""
                         ><i class="bi bi-telephone-fill right-icon"></i>+91
                         9200362221</a
                       >
@@ -323,10 +323,10 @@
           </p>
           <h2>Why Choose Us?</h2>
           <div class="row">
-            <div class="col-xl-6">
+            <div class="col-xl-6 col-12">
               <img src="imagesfile/about-image.png" alt="" />
             </div>
-            <div class="col-xl-6 col-md-12 col-sm-12">
+            <div class="col-xl-6 col-md-12 col-sm-12 col-12">
               <!-- Why Choose Us Section -->
 
               <ul class="features-list">
@@ -360,10 +360,10 @@
               <div class="cta">
                 <p>Join us in building a sustainable tomorrow!</p>
                 <div class="row">
-                  <div class="col-xl-4 col-md-4 col-sm-4">
+                  <div class="col-xl-4 col-md-4 col-sm-4 col-4">
                     <a href="" class="btn btn-primary btn-cta">Get Started</a>
                   </div>
-                  <div class="col-xl col-md col-sm">
+                  <div class="col-xl col-md col-sm col">
                     <a href="" class="supportive-button">Read More</a>
                   </div>
                 </div>
@@ -511,7 +511,7 @@
           </p>
           <div class="project-grid">
             <div class="row">
-              <div class="col-xl-4 col-sm-6 col-md-4  project-column ">
+              <div class="col-xl-4 col-sm-6 col-md-4 col-12 project-column ">
                 <a href="">
                   <div class="project-card">
                     <img src="imagesfile/2021-08-12-768x768 (1).jpeg" alt="" />
@@ -528,7 +528,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-xl-4 col-md-4 col-sm-6  project-column">
+              <div class="col-xl-4 col-md-4 col-sm-6 col-12  project-column">
                 <a href="">
                   <div class="project-card">
                     <img src="imagesfile/2021-08-12-768x768.jpeg" alt="" />
@@ -543,7 +543,7 @@
                   </div>
                 </a>
               </div>
-              <div class="col-xl-4 col-md-4 col-sm-6  project-column">
+              <div class="col-xl-4 col-md-4 col-sm-6 col-12 project-column">
                 <a href="">
                   <div class="project-card">
                     <img src="imagesfile/2021-08-17-768x768.jpeg" alt="" />
@@ -560,7 +560,7 @@
               </div>
 
               <div
-                class="col-xl-6 col-md-6 col-sm-6  project-column project-second-line-right"
+                class="col-xl-6 col-md-6 col-sm-6 col-12  project-column project-second-line-right"
               >
                 <a href="">
                   <div class="project-card">
