--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
               >
                 <a href="">
                   <div class="project-card">
-                    <img src="imagesfile/2021-08-17-768x768.jpeg" alt="" />
+                    <img style="background-position: top;" src="imagesfile/2021-08-17-768x768.jpeg" alt="" />
                     <div class="project-card-content">
                       <p class="project-card-title">Off Grid Solar</p>
                       <p class="project-card-description">
